Add data preprocessing

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+/elo-merchant-category-recommendation/
+elo-merchant-category-recommendation.zip
+/yifei/preprocess/
+*.ipynb
