Add randomforest optimized by cross validation

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ Temporary Items
 elo-merchant-category-recommendation.zip
 /yifei/preprocess/
 *.ipynb
+/yifei/models/__pycache__/
+/yifei/result
